# pyqtmol

./: .gitignore  README.md  app.py  main.py  none.html  pyproject.toml  pyqtmol.spec  requirements.txt  template.html
assets/: none.html  styles.qss  template.html
src/: main.py
src/core/: assets.py  config.py  molecule.py
src/network/: client.py
src/resources/: style.qss
src/templates/: none.html  template.html
src/ui/: theme.py  window.py
src/ui/widgets/: __init__.py  loading.py  result_list.py  search_bar.py  viewer.py
src/utils/: text.py
